RESOLVED FIXED18868
SQUIRRELFISH: window.this shows up as a property, but it shouldn't
https://bugs.webkit.org/show_bug.cgi?id=18868
Summary SQUIRRELFISH: window.this shows up as a property, but it shouldn't
Maciej Stachowiak
Reported 2008-05-03 01:35:49 PDT
"this" appears as a property of the window object to enumeration and lookup as "window.this", but it should not. This is likely a side effect of us treating it as a special local/global var.
Attachments
don't keep "this" in the symbol table at runtime (3.31 KB, patch)
2008-05-06 20:14 PDT, Maciej Stachowiak
oliver: review+
Geoffrey Garen
Comment 1 2008-05-05 20:52:33 PDT
I think we should remove "this" from the symbol table after codegen.
Maciej Stachowiak
Comment 2 2008-05-06 20:14:37 PDT
Created attachment 20995 [details] don't keep "this" in the symbol table at runtime
Oliver Hunt
Comment 3 2008-05-06 20:23:05 PDT
Comment on attachment 20995 [details] don't keep "this" in the symbol table at runtime r=me, with the aswsertion changes we discussed
Note You need to log in before you can comment on or make changes to this bug.