2008-05-06  Maciej Stachowiak  <mjs@apple.com>

Reviewed by Oliver.
        
        - fixed "SQUIRRELFISH: window.this shows up as a property, but it shouldn't"
        https://bugs.webkit.org/show_bug.cgi?id=18868
        
        The basic approach is to have "this" only be present in the symbol
        table at compile time, not runtime.

        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::~CodeGenerator): Remove "this" from symbol table.
        (KJS::CodeGenerator::CodeGenerator): Add "this" back when re-using
        a symbol table.
        * VM/CodeGenerator.h:
        * VM/Machine.cpp:
        (KJS::Machine::execute): Don't assert that "this" is in the symbol table.



git-svn-id: http://svn.webkit.org/repository/webkit/branches/squirrelfish@32938 268f45cc-cd09-0410-ab3c-d52691b4dbfc