JavaScriptCore/VM/CodeGenerator.cpp
@@ -172,8 +172,11 @@ CodeGenerator::CodeGenerator(ProgramNode* programNode, const ScopeChain& scopeCh
 {
     // Global code can inherit previously defined symbols.
     if (int size = symbolTable->size()) {
+        // re-add "this" to symbol table
         ASSERT(symbolTable->contains(m_propertyNames->thisIdentifier.ustring().rep()));
-        
+        symbolTable->add(m_propertyNames->thisIdentifier.ustring().rep(), Machine::ProgramCodeThisRegister);
+        ++size;
+
         // Add previously defined symbols to bookkeeping.
         m_locals.resize(size);
         SymbolTable::iterator end = symbolTable->end();
@@ -277,6 +280,12 @@ CodeGenerator::CodeGenerator(EvalNode* evalNode, const ScopeChain& scopeChain, S
         codeBlock->declaredFunctionNames.append(funcDecl->m_ident);
         addConstant(funcDecl);
     }
+}
+
+CodeGenerator::~CodeGenerator()
+{
+    // remove "this" from symbol table so it does not appear as a global object property at runtime
+    symbolTable().remove(m_propertyNames->thisIdentifier.ustring().rep());
 }
 
 void CodeGenerator::addParameter(const Identifier& ident)
